--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h1 class="brand-heading">Darius Chia</h1>
                         <p class="intro-text">Computer Science student at the University of Toronto, graduating in June 2015.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-chevron-down animated arrow"></i>
+                            <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
 
                 <hr>
                 <a href="#contact" class="btn btn-circle page-scroll">
-                    <i class="fa fa-chevron-down animated arrow"></i>
+                    <i class="fa fa-angle-double-down animated"></i>
                 </a>
             </div>
         </div>
