Updated descriptions for projects.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h3>Simple Lists</h3>
                 <img src="img/SimpleListSS1-2.png" width="300px" />
                 
-                <p><br />This is an Android app. Create as many lists as you need to help organize your life, whether it is a shopping list or to-do list.
+                <p><br />This is an Android app that allows users to create an unlimited number of lists with items that are simple to add, edit, rearrange, and delete. I implemented drag and drop, swipe, and double-tap gesture capabilities. Furthermore, no permissions are needed, and the app requires only very little memory.
                 </p>
                 <a href="https://play.google.com/store/apps/details?id=com.dariuschia.simplelists" target="_blank">
                     <img alt="Get it on Google Play"
@@ -98,15 +98,9 @@
                 </a>
                 <hr class="pad-bottom">
 
-                <h3>Budget App</h3>
+                <h3>MyFinances</h3>
                 <img src="img/SimpleListSS1-2.png" width="300px" />
-                <p><br />Placeholder description.</p>
-                <a href="#" class="btn btn-default btn-lg image-pad-bottom">See more at Nodilly</a>
-                <hr class="pad-bottom">
-
-                <h3>Gallery App</h3>
-                <img src="img/SimpleListSS1-2.png" width="300px" />
-                <p><br />Placeholder description. Work in progress.</p>
+                <p><br />This Android app is a personal finances tracker that helps users to keep track of their income, expenses, loans, and accounts receivables. I implemented automated recording and reminders features that are synced with Google Calendar for recurring transactions such as salary and rent. Trend graphs to allow users to set goals and predict time until goal achievement is a work in progress.</p>
 
                 <hr>
                 <a href="#contact" class="btn btn-circle page-scroll">
