Updated MyFinances image.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <hr class="pad-bottom">
 
                 <h3>MyFinances</h3>
-                <img src="img/SimpleListSS1-2.png" width="300px" />
+                <img src="img/MyFinancesSS.png" width="300px" />
                 <p><br />This Android app is a personal finances tracker that helps users to keep track of their income, expenses, loans, and accounts receivables. I implemented automated recording and reminders features that are synced with Google Calendar for recurring transactions such as salary and rent. Trend graphs to allow users to set goals and predict time until goal achievement is a work in progress.</p>
 
                 <hr>
